Corrected snapchat url

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		Links to my social media profiles:<BR>
 		<A HREF="https://www.instagram.com/thesuhanityagi">Instagram</A><BR>
 		<A HREF="https://www.facebook.com/thesuhanityagi">Facebook</A><BR>
-		<A HREF="https://www.snapchat.com/thesuhanityagi">Snapchat</A><BR>
+		<A HREF="https://www.snapchat.com/add/thesuhanityagi">Snapchat</A><BR>
 		<A HREF="https://www.twitter.com/thesuhanityagi">Twitter</A><BR>
 		<BR><U>Note:</U> All accounts are currently being handled by Shrey Tyagi (her brother).
 	</BODY>
